Jira 1915: use valueOf() when boxing primitives.
git-svn-id: http://svn.codehaus.org/groovy/trunk/groovy/groovy-core@15496 a5544e8c-8a19-0410-ba12-f9af4593a198